--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,8 +3,9 @@
 kind: ConfigMap 
 apiVersion: v1 
 metadata:
-  name: address-lookup-configmap
+  name: address-lookup-parameters
   namespace: #@ data.values.namespace
 data:
   ENV: #@ data.values.environment
   SWAGGER_ENDPOINT: 20.68.185.60
+  ADDRESS_LOOKUP_REMOTE_URL: http://localhost:8090/mock/address-lookup-api
