--- a/k8s/prod/prod.yml
+++ b/k8s/prod/prod.yml
@@ -3,6 +3,7 @@
 
 namespace: group-lookups-prod
 image: rlintegrationservices.azurecr.io/address-lookup-api:v0
+mockimage: rlintegrationservices.azurecr.io/address-lookup-api-mock:v0
 environment: prod
 version: 0.0.1
 resources:
