--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
     "k8s-yaml-service-generate-prod": ".\\k8s\\ytt -f k8s/service.yaml -f k8s/prod/prod.yml  > service.prod.yaml",
     "k8s-yaml-configmap-generate-prod": ".\\k8s\\ytt -f k8s/configmap.yaml -f k8s/prod/prod.yml  > configmap.prod.yaml",
     "k8s-yaml-ingress-generate-prod": ".\\k8s\\ytt -f k8s/ingress.yaml -f k8s/prod/prod.yml  > ingress.prod.yaml",
-    "k8s-yaml-generate-prod": "npm run k8s-yaml-namespace-generate-prod && npm run k8s-yaml-deployment-generate-prod && npm run k8s-yaml-service-generate-prod && npm run k8s-yaml-configmap-generate-prod && npm run k8s-yaml-ingress-generate-prod"
+    "k8s-yaml-generate-prod": "npm run k8s-yaml-namespace-generate-prod && npm run k8s-yaml-deployment-generate-prod && npm run k8s-yaml-service-generate-prod && npm run k8s-yaml-configmap-generate-prod && npm run k8s-yaml-ingress-generate-prod",
+
+    "docker-mock-build": "docker image build -t %npm_package_name%-mock:%npm_package_config_version_tag% ./mock",
+    "docker-mock-tag": "docker tag %npm_package_name%-mock:%npm_package_config_version_tag% %npm_package_config_integration_container_registry%.azurecr.io/%npm_package_name%-mock:%npm_package_config_version_tag%",
+    "docker-mock-run": "docker run -p 2525:2525 -p 8090:8090 %npm_package_name%-mock:%npm_package_config_version_tag% --configfile /imposters/imposters.ejs --allowInjection",
+    "docker-mock-push-prod": "docker push %npm_package_config_integration_container_registry%.azurecr.io/%npm_package_name%-mock:%npm_package_config_version_tag%"
   },
   "author": "",
   "license": "ISC",
